--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,8 +18,15 @@
     --foreground: #ededed;
   }
 }
+/* html{
+  width: 100%;
+  height: 100%;
+} */
 
 body {
+  /* margin: 0 60px 0 60px; */
+  /* width: 100%;
+  height: 100%; */
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
