--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,15 @@
   --foreground: #171717;
 }
 
+.scrollContent {
+  flex-grow: 1; /* 남은 공간을 모두 차지하도록 설정 */
+  overflow-y: auto; /* 세로 스크롤 허용 */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; 
+  /* 필요하다면 max-height를 여기서 설정할 수도 있습니다.
+     예: max-height: calc(100vh - 200px); */
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
