--- a/src/app/signup/signup.module.css
+++ b/src/app/signup/signup.module.css
@@ -13,6 +13,16 @@
     outline-color: #4FA969;
 }
 
+.style.inputNoLine{
+    padding-left: 1rem; 
+    padding-right: 1rem;
+    padding-top: 0.75rem; 
+    padding-bottom: 0.75rem;
+    width: 100%;
+    border-radius: 0.25rem;
+    border: 1px solid #afafaf
+}
+
 .btn {
     padding: 0.75rem 5rem 0.75rem 5rem;
     border-radius: 0.25rem;
