--- a/src/components/ChargingMap.module.css
+++ b/src/components/ChargingMap.module.css
@@ -1,11 +1,11 @@
-.custom-overlay-default {
+.customOverlayDefault {
     background-color: white;
     padding: 2px 6px;
     border-radius: 4px;
     border: 1px solid #ccc;
     font-size: 12px;
     font-weight: bold;
-    color: #4FA969; /* availableCnt 색상 */
+    color: red; /* availableCnt 색상 */
     white-space: nowrap; /* 텍스트가 줄바꿈되지 않도록 */
     text-align: center;
     position: relative;
