--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -19,10 +19,11 @@
     display: flex;
     flex-direction: row;
     list-style: none;
-    gap: 2rem;
+    gap: 3rem;
     margin: 0;
     padding: 0;
     font-weight: 500;
+    cursor: pointer;
 }
 
 .authBox{
