--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
      예: max-height: calc(100vh - 200px); */
 }
 
+/* 라운드 버튼 */
 .propYn{
     border: 1px solid #4FA969;
     border-radius: 0.25rem;
@@ -25,6 +26,23 @@
   background-color: #4FA969;
   color: white;
   border-color: #4FA969;
+}
+
+/* 확인/취소 버튼 */
+.btn {
+    padding: 0.75rem 5rem 0.75rem 5rem;
+    border-radius: 0.25rem;
+    font-weight: bold;
+}
+
+.cancel {
+    background-color: #f2f2f2;
+    color: #666666;
+}
+
+.confirm {
+    background-color: #4FA969;
+    color: white;
 }
 
 @theme inline {
