--- a/src/components/Toast/Toast.module.css
+++ b/src/components/Toast/Toast.module.css
@@ -1,6 +1,6 @@
 .toast {
     position: fixed;
-    bottom: 20px;
+    top: 100px;
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(0, 0, 0, 0.7);
