--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -19,11 +19,24 @@
     display: flex;
     flex-direction: row;
     list-style: none;
-    gap: 3rem;
+    gap: 2rem;
     margin: 0;
     padding: 0;
     font-weight: 500;
     cursor: pointer;
+}
+
+.menu-button {
+  cursor: pointer;
+  border-radius: 0.375rem; /* rounded-md */
+  padding-top: 0.25rem;    /* py-1 */
+  padding-bottom: 0.25rem;
+  padding-left: 0.75rem;   /* px-3 */
+  padding-right: 0.75rem;
+}
+
+.menu-button:hover {
+  background-color: #f2f2f2;
 }
 
 .authBox{
