--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     background-color: #fff;
     border-bottom: 1px solid #F2F2F2;
-    padding: 0 60px 0 60px; ;
+    padding: 0 60px 0 60px;
 }
 
 /* .logoBox{
@@ -27,12 +27,12 @@
 }
 
 .menu-button {
-  cursor: pointer;
-  border-radius: 0.375rem; /* rounded-md */
-  padding-top: 0.25rem;    /* py-1 */
-  padding-bottom: 0.25rem;
-  padding-left: 0.75rem;   /* px-3 */
-  padding-right: 0.75rem;
+    cursor: pointer;
+    border-radius: 0.375rem; /* rounded-md */
+    padding-top: 0.25rem;    /* py-1 */
+    padding-bottom: 0.25rem;
+    padding-left: 0.75rem;   /* px-3 */
+    padding-right: 0.75rem;
 }
 
 .menu-button:hover {
